# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-06-16 19:27:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88

    Summary:
      xml, fix serialization for encodings different than UTF-8
    Revision:
      itools--main--0.9--patch-88


    modified files:
     Changelog xml/XML.py


2005-06-16 12:46:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-87

    Summary:
      get ready to release 1.1
    Revision:
      itools--main--0.9--patch-87


    modified files:
     CHANGES.txt Changelog setup.py


2005-06-15 16:50:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-86

    Summary:
      gettext, fix "PO.get_translation" when the msgstr is empty
    Revision:
      itools--main--0.9--patch-86


    modified files:
     Changelog gettext/PO.py


2005-06-07 16:21:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-85

    Summary:
      xhtml, fix "Element.get_end_tag_as_html"
    Revision:
      itools--main--0.9--patch-85


    modified files:
     Changelog xhtml/XHTML.py


2005-06-07 16:14:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-84

    Summary:
      xhtml, fix "Element.get_end_tag_as_html"
    Revision:
      itools--main--0.9--patch-84


    modified files:
     Changelog xhtml/XHTML.py


2005-06-07 15:49:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-83

    Summary:
      gettext, fix "DomainAware.select_language"
    Revision:
      itools--main--0.9--patch-83

    When the environment variable 'LANGUAGE' is not available.

    modified files:
     Changelog gettext/domains.py


2005-06-07 13:31:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-82

    Summary:
      get ready to release 0.9.0
    Revision:
      itools--main--0.9--patch-82


    modified files:
     CHANGES.txt Changelog README.txt gettext/domains.py setup.py


2005-06-07 08:31:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-81

    Summary: