@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-06-16 19:55:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-89
+
+    Summary:
+      xhtml, fix head output style (remove ugly blank lines)
+    Revision:
+      itools--main--0.9--patch-89
+
+
+    modified files:
+     Changelog xhtml/XHTML.py
+
+
 2005-06-16 19:27:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88
 
     Summary:
